# iqra-sbms

./: .gitignore  README.md  iqra-sbms-v2.code-workspace  readme.md
client/: eslint.config.js  index.html  mail_student_account.html  mail_student_receipt.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.mjs
client/components/: admin_sidebar.html  confirm_modal.html  form_modal.html  slot_modal.html  student_sidebar.html  utils.html
client/components/icons/: close.html  delete.html  edit.html  message.html
client/layouts/: base.html
client/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
client/src/api/: auth.ts  bill.ts  cashout.ts  discount.ts  fee.ts  mockStudents.ts  payment.ts  stats.ts  student.ts
client/src/components/: AnimatedProgress.tsx  BillSummaryTable.tsx  FeesMultiSelect.tsx  Header.tsx  LoadingOverlay.tsx  PageWrapper.tsx  Sidebar.tsx  StatCard.tsx
client/src/defs/: bills.tsx  cashout.tsx  discounts.tsx  fees.tsx  students.tsx
client/src/hooks/: useCheckNativeNav.ts  useRenderCount.ts  useTableState.ts  useTitle.ts
client/src/lib/: dayjs.ts  lookups.ts  patterns.ts  sidebarLinks.tsx  storeContext.tsx  students.ts  theme.ts
client/src/routes/: __root.tsx  _user.tsx  login.tsx  receipt.tsx
client/src/styles/: error.module.css  page-wrapper.module.css  print.module.css  sidebar.module.css  utils.module.css
client/src/tests/: helpers.test.ts  (+1 more)
server/: .env-default  .flaskenv  .gitignore  config.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py  run_cli.py  vercel.json  wsgi.py
server/data/: WHAT_IS_IN_HERE  discounts.json  fees.json  students.json
server/migrations/versions/: 75540de82de2_.py
server/scripts/: cleanup.py
server/src/: app.py  config.py  helpers.py  id.py  models.py
server/src/api/: __init__.py  auth.py  bill.py  cashout.py  discount.py  fee.py  payment.py  student.py  utils.py
server/src/schemas/: auth.py  base.py  bill.py  cashout.py  discount.py  fee.py  payment.py
server/src/tests/: conftest.py
server/src/tests/api/: test_auth.py  test_bill.py  test_discount.py  test_fee.py  test_payment.py  test_student.py
server/src/tests/models/: test_admin.py  test_bill.py  test_cashout.py  test_fee.py
server/system/: admin.sql  app.py  config.example.py  forms.py  models.py  utils.py
server/system/controllers/: __init__.py  admin.py  filters.py  student.py
server/system/views/: admin.py  home.py  student.py
(+85 files in other folders)
