[tool.poetry]
name = "sbms"
version = "0.1.0"
description = "Student Billing Management System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
mysqlclient = "^2.2.4"
flask-login = "^0.6.2"
flask-session = "^0.5.0"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.5"
shortuuid = "^1.0.11"
flask-mail = "^0.9.1"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
stripe = "^7.9.0"
pyopenssl = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
